[package]
name = "forge-pipeline"
version = "0.1.0"
edition = "2021"
description = "Pipeline orchestration that composes decomposers, transforms, and assemblers into runnable graphs"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
